<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/beige_400"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_profile_ET_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="@string/enter_new_name" />

    <Button
        android:id="@+id/edit_profile_BTN_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_light"
        android:textColor="@color/white"
        android:text="@string/select_image"
        />

    <Button
        android:id="@+id/edit_profile_BTN_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_light"
        android:textColor="@color/white"
        android:text="@string/upload_and_save" />
</LinearLayout>
