<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/beige_400"
    android:paddingHorizontal="0dp"
    android:gravity="center_horizontal"
    tools:context=".ui.TaskUpperMenuFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <!-- Settings Button on the left -->
        <ImageButton
            android:id="@+id/taskBoard_BTN_settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings"
            android:src="@drawable/setting_img"
            android:scaleType="centerInside"
             />

        <!-- Title in center -->
        <TextView
            android:id="@+id/taskBoard_LBL_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_board"
            android:textColor="#000000"
            android:layout_marginEnd="40dp"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/taskBoard_BTN_add"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add"
            android:src="@drawable/add"
            android:scaleType="centerInside" />

    </LinearLayout>

    <!-- Buttons Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/taskBoard_BTN_todo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:text="@string/to_do"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:cornerRadius="50dp"
            app:backgroundTint="@color/TODO_blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/taskBoard_BTN_in_progress"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:text="@string/in_progress"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:cornerRadius="50dp"
            app:backgroundTint="@color/IN_PROGRESS_orange" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/taskBoard_BTN_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:cornerRadius="50dp"
            app:backgroundTint="@color/DONE_green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/taskBoard_BTN_Neglect"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neglect"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:cornerRadius="50dp"
            app:backgroundTint="@color/NEGLECT_red" />
    </LinearLayout>
</LinearLayout>
