<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/beige_400"
    android:padding="8dp">

    <ImageButton
        android:id="@+id/footer_BTN_refresh"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/sync"
        android:scaleType="centerInside"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:id="@+id/footer_IMG_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_above="@id/footer_LBL_footer"
        android:src="@drawable/plant_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/footer_LBL_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_sprout"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/teal_light"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/footer_BTN_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/teal_light"
        android:textColor="@android:color/white"
        android:layout_margin="8dp"/>
</RelativeLayout>
